# LLM-forge_v1

./: .dockerignore  .env.example  .env.production  .gitignore  AGENTS.md  Dockerfile  PRESENTATION.md  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
00 Daily/2026/: 20260313.md
configs/: base.yaml
configs/agents/: base.yaml  example.yaml
configs/eval-suites/: basic-agent-suite.yaml
configs/examples/: cam-dpo-qwen3.5-0.8b.yaml  cam-dpo-qwen3.5-2b.yaml  cam-dpo-qwen3.5-4b.yaml  cam-dpo.yaml  cam-sft-qwen3.5-0.8b.yaml  cam-sft-qwen3.5-2b.yaml  cam-sft-qwen3.5-4b.yaml  cam-sft.yaml  export-awq.yaml  export-gptq.yaml  grpo-format-reward.yaml
configs/models/: llama3.2-1b.yaml  mistral-7b.yaml  qwen-vl-2b.yaml  qwen2.5-3b.yaml  qwen3.5-0.8b.yaml  qwen3.5-2b.yaml  qwen3.5-4b.yaml
configs/openclaw/: default.yaml
configs/pipelines/: example.yaml
configs/recipes/: classification-sentiment.yaml  coder-sft.yaml  dpo-starter.yaml  embedding-similarity.yaml  export-awq.yaml  (+10 more)
data/: workflows.json
demo/: demo_config.yaml  intent_train.jsonl
docs/: CLAUDE_CODE_EXECUTION_PROMPT.md  CLAUDE_CODE_ROADMAP.md  MULTI_AGENT_OPERATING_MODEL.md  SETUP_GUIDE.md  TASK_PACKETS.md  deployment-guide.md  index.md  user-guide.md
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  networkpolicy.yaml  pdb.yaml  postgresql.yaml  redis.yaml  secret.yaml  service.yaml
prompts/: cam_taxonomy.txt
scripts/: clean_dpo_pairs.py  dev.sh  dpo_2b_v2_pipeline.py  generate_cam_dpo_pairs.py  run_eval.py  seed_demo.py  seed_demo_data.py  seed_demo_tasks.py
site/: index.html
tests/: test_agent.py  test_agent_cli.py  test_agent_eval.py  test_agent_server.py  test_agent_validation.py  test_assistant.py  test_auth.py  test_awq.py  test_builtin_tools.py  test_cache.py  test_canary.py  test_classification.py  test_cli.py  test_client.py  test_closed_loop_pipeline.py  test_compute.py  test_compute_hardening.py  test_config.py  test_cost.py  test_data.py  test_data_gen.py  test_dataset_version.py  test_edge_cases.py  test_embedding.py  test_env.py  test_experiment_store.py  test_feedback.py  test_gptq.py  test_grpo.py  test_guardrails.py  test_guardrails_engine.py  test_hardware.py  test_hf_datasets.py  test_hpo.py  test_integration_p0.py  test_job_registry.py  test_lineage.py  test_llm_judge.py  test_long_term_memory.py  test_lora_params.py  (+30 more)
ui/: index.html  package-lock.json  package.json  vite.config.ts
(+376 files in other folders)
